cambios en media queries y en toggler icon

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 
 
- <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+<link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 
 <!--Bootstrap CSS en la nube (siempre bien abajo de los otros links de estilo)--> 
 
@@ -52,7 +52,7 @@
 
 
 
-  <button class="navbar-toggle" type="button" data-toggle=collapse data-target="#navmenu">
+  <button class="navbar-toggler custom-toggler" type="button" data-toggle=collapse data-target="#navmenu">
   	<span class="navbar-toggler-icon"></span>
   </button>
 
