--- a/eventos.html
+++ b/eventos.html
@@ -49,7 +49,7 @@
 
 
 
-  <button class="navbar-toggle" type="button" data-toggle=collapse data-target="#navmenu">
+  <button class="navbar-toggler custom-toggler" type="button" data-toggle=collapse data-target="#navmenu">
     <span class="navbar-toggler-icon"></span>
   </button>
 
