--- a/privacidad.html
+++ b/privacidad.html
@@ -35,21 +35,23 @@
 <header class="header">
 
 <section class="menu">
- <nav  class="navbar navbar-expand-lg navbar-light bg-light" class="highlightTextIn">
+ <nav  class="navbar navbar-expand-lg navbar-light bg-transparent">
 
 
-    <a class="navbar-brand" href="index.html"><img src="img/gianlogo3.png" width="250" height="100" alt="Volver al Inicio"/> </a>
+    <a class="navbar-brand" href="index.html"><img class="animate__animated animate__fadeIn" src="img/gianlogo5.png" width="250" height="75" alt="Volver al Inicio"/> </a>
 
-  <button class="navbar-toggle" data-toggle=collapse data-target="#navmenu">
+
+
+  <button class="navbar-toggler custom-toggler" type="button" data-toggle=collapse data-target="#navmenu">
     <span class="navbar-toggler-icon"></span>
   </button>
 
 
-<div class="collapse navbar-collapse"  id="navmenu"> 
+<div class="collapse navbar-collapse "  id="navmenu"> 
 
-        <ul class="navbar-nav ml-auto">
+        <ul class="navbar-nav ml-auto brackets">
                 <li class="nav-item">  <a href="index.html" class="nav-link">-INICIO-</a> </li>
-                <li class="nav-item">  <a href="productos.html" class="nav-link">-PRODUCTOS-</a></li>
+                <li class="nav-item">  <a href="productos.html" class="nav-link" id="linke">-PRODUCTOS-</a></li>
                 <li class="nav-item">  <a href="eventos.html" class="nav-link">-EVENTOS-</a> </li>
                 <li class="nav-item"> <a href="clientes.html" class="nav-link">-CLIENTES-</a> </li>
                 <li class="nav-item"> <a href="bio.html" class="nav-link">-BIO-</a> </li>
