--- a/clientes.html
+++ b/clientes.html
@@ -4,7 +4,7 @@
 
   <meta charset="UTF-8">
   
-  <meta name="keywords" content="Gian Scaduto, Fotografia, Estudio, Cuadros, Comodoro, Rivadavia, Sesiones, Eventos">
+  <meta name="keywords" content="Gian Scaduto, Fotografia, Estudio, Comodoro, Rivadavia, Sesiones, Eventos, Modelos, Detalles, Clientes, Momentos, Gastronomia, Desfiles, Producciones">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
@@ -102,7 +102,7 @@ También realizamos retoques digitales y trabajos especiales para medios audiovi
 
 <section class="border"> 
 	<article class="noticia">
-			<h1 class="noticia__titulo">Sesiones en nuestro estudio</h1>
+			<h2 class="noticia__titulo">Sesiones en nuestro estudio</h2>
 
 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -117,7 +117,7 @@ proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
 <section class="border"> 
 	<article class="noticia">
-		<h1 class="noticia__titulo">Arte para el hogar</h1>
+		<h2 class="noticia__titulo">Arte para el hogar</h2>
 
 
 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -134,7 +134,7 @@ proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
 <section class="border"> 
 	<article class="noticia">
-		<h1 class="noticia__titulo">Eventos privados</h1>
+		<h2 class="noticia__titulo">Eventos privados</h2>
 
 
 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
