--- a/contacto.html
+++ b/contacto.html
@@ -5,7 +5,7 @@
 
     <meta charset="UTF-8">
   
-  <meta name="keywords" content="Gian Scaduto, Fotografia, Estudio, Cuadros, Comodoro, Rivadavia, Sesiones, Eventos">
+  <meta name="keywords" content="Gian Scaduto, Fotografia, Estudio, Cuadros, Comodoro, Rivadavia, Sesiones, Eventos, Contacto, Mail, Telefono, Instagram, Facebook, Pinterest, San Martín, Correo Electronico">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
@@ -15,7 +15,7 @@
 
 
 
-<link rel="stylesheet" href="prueba/css/estilo.css">
+
 
 
 
@@ -32,6 +32,9 @@
 <link rel="icon" type="image/png" sizes="16x16" href="icon/favicon-16x16.png">
 <link rel="manifest" href="icon/site.webmanifest">
 
+
+
+<link rel="stylesheet" href="prueba/css/estilo.css">
 </head>
 
 
@@ -81,7 +84,7 @@
     <div class="col-sm" id="datoscontacto">
      
 
-<b>DATOS DE CONTACTO</b>
+<h1><b>DATOS DE CONTACTO</b><h1>
 <br>
 <br>
 0297 297-4585656 / 0297 455-9513 <a href="https://api.whatsapp.com/send?phone=5492974585653&text=hola"> <br>Contactar por WhatsApp</a>
@@ -107,7 +110,7 @@ Local : San Martín 258 - Comodoro Rivadavia - <a href="https://www.google.com/m
 
 
 
-      <b>REDES SOCIALES</b>
+      <h2><b>REDES SOCIALES</b><h2>
 
 <br>
 <br>
@@ -124,7 +127,7 @@ Local : San Martín 258 - Comodoro Rivadavia - <a href="https://www.google.com/m
 
 
 
-      <b> CONTACTENOS</b>
+      <h3><b> CONTACTENOS</b><h3>
 <br>
 <br>
 <form>
