--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <header class="header">
 
 <section class="menu">
- <nav  class="navbar navbar-expand-lg navbar-light bg-transparent">
+ <nav  class="navbar navbar-expand-lg navbar-light">
 
 
   	<a class="navbar-brand" href="index.html"><img class="animate__animated animate__fadeIn" src="img/gianlogo5.png" width="250" height="75" alt="Volver al Inicio"/> </a>
@@ -60,7 +60,7 @@
 <div class="collapse navbar-collapse "  id="navmenu"> 
 
         <ul class="navbar-nav ml-auto brackets">
-    			<li class="nav-item">  <a href="index.html" class="nav-link">-INICIO-</a> </li>
+    			
 	            <li class="nav-item">  <a href="productos.html" class="nav-link" id="linke">-PRODUCTOS-</a></li>
 	            <li class="nav-item">  <a href="eventos.html" class="nav-link">-EVENTOS-</a> </li>
 	            <li class="nav-item"> <a href="clientes.html" class="nav-link">-CLIENTES-</a> </li>
