--- a/eventos.html
+++ b/eventos.html
@@ -5,7 +5,7 @@
 
   <meta charset="UTF-8">
   
-  <meta name="keywords" content="Gian Scaduto, Fotografia, Estudio, Cuadros, Comodoro, Rivadavia, Sesiones, Eventos">
+  <meta name="keywords" content="Gian Scaduto, Fotografia, Servicio, Estudio, Cuadros, Comodoro, Rivadavia, Sesiones, Eventos, Camara, Fotografo, Moda, Desfiles">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
@@ -87,19 +87,29 @@
 
     <div class="w-100"></div>
 
-    <div class="col">Eventos privados: Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+    <div class="col">
+
+       <h1 class="eventosinfo">Eventos privados:<h1> 
+
+<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+proident, sunt in culpa qui officia deserunt mollit anim id est laborum. <p>
+
 </div>
-    <div class="col"> Sesiones en nuestro estudio: Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+
+    <div class="col"> <h2>Sesiones en nuestro estudio:<h2> 
+
+
+
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<p>
 </div>
   </div>
 </div>
